fix push notification ios

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -958,7 +958,7 @@ body#afui .splt {
   padding-left: 20px;
 }
 
-.map-float-box span a {
+.map-float-box a {
   color: white;
   text-decoration: none;
   display: inline-block;
